# keyboard-configurator-gui

./: Cargo.toml
src/: main.rs
ui/: key.60  key_row.60  keyboard.60  launch_1.json  main.60  main_layout.json
